{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 86,
  "lineage": "937134b9-0892-effe-5210-b1107b657509",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oxla-bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:836768216030:instance/i-08682c98b030f6e78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050f197f8e2124efa",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-08682c98b030f6e78",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "oxla-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071cf2656a75eb082",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "54.88.148.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050f197f8e2124efa",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016851d68aea44a4e",
            "tags": {
              "Environment": "lab",
              "Name": "oxla-server"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "oxla-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f43d802db1dbae9d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.oxla-instance-profile",
            "aws_iam_role.oxla-instance-role",
            "aws_key_pair.oxla-keypair",
            "aws_security_group.oxla-bastion-security-group",
            "aws_security_group.oxla-ec2-instance-security-group",
            "aws_subnet.oxla-public-subnet",
            "aws_vpc.oxla-vpc",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.oxla-assume-role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oxla-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:836768216030:instance/i-0bd224839c57606c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc9b6f14b8c049ce",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0bd224839c57606c6",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007df4a193bfad1a3",
            "private_dns": "ip-10-0-128-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc9b6f14b8c049ce",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04db3229600d528ae",
            "tags": {
              "Environment": "lab",
              "Name": "oxla-private-server"
            },
            "tags_all": {
              "Environment": "lab",
              "Name": "oxla-private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f43d802db1dbae9d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.oxla-instance-profile",
            "aws_iam_role.oxla-instance-role",
            "aws_security_group.oxla-bastion-security-group",
            "aws_security_group.oxla-ec2-instance-security-group",
            "aws_subnet.oxla-private-subnet",
            "aws_vpc.oxla-vpc",
            "data.aws_ami.ubuntu",
            "data.aws_iam_policy_document.oxla-assume-role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "oxla-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:internet-gateway/igw-0b8c644a59446f24a",
            "id": "igw-0b8c644a59446f24a",
            "owner_id": "836768216030",
            "tags": {
              "Name": "oxla-internet-gateway"
            },
            "tags_all": {
              "Name": "oxla-internet-gateway"
            },
            "vpc_id": "vpc-023970052ee17616c"
          },
          "dependencies": [
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oxla-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:route-table/rtb-01fa9b27024835652",
            "id": "rtb-01fa9b27024835652",
            "owner_id": "836768216030",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "oxla-private-route-table"
            },
            "tags_all": {
              "Name": "oxla-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023970052ee17616c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "oxla-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:route-table/rtb-0f144baf7ce0beaed",
            "id": "rtb-0f144baf7ce0beaed",
            "owner_id": "836768216030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c644a59446f24a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "oxla-route-table"
            },
            "tags_all": {
              "Name": "oxla-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023970052ee17616c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.oxla-internet-gateway",
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oxla-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0716b75a4b5ad2e91",
            "route_table_id": "rtb-01fa9b27024835652",
            "subnet_id": "subnet-04db3229600d528ae"
          },
          "dependencies": [
            "aws_route_table.oxla-private-route-table",
            "aws_subnet.oxla-private-subnet",
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "oxla-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085c2d1623317b6ce",
            "route_table_id": "rtb-0f144baf7ce0beaed",
            "subnet_id": "subnet-016851d68aea44a4e"
          },
          "dependencies": [
            "aws_internet_gateway.oxla-internet-gateway",
            "aws_route_table.oxla-route-table",
            "aws_subnet.oxla-public-subnet",
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oxla-bastion-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:security-group/sg-043a3d1921228d1ad",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043a3d1921228d1ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public-Traffic-TLS",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public-Traffic-TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public-Traffic-TLS",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-allow-public-traffic",
            "name_prefix": "",
            "owner_id": "836768216030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-023970052ee17616c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oxla-ec2-instance-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:security-group/sg-0f43d802db1dbae9d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f43d802db1dbae9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Public-Traffic-TLS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043a3d1921228d1ad"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Public-Traffic-TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043a3d1921228d1ad"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Public-Traffic-TLS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043a3d1921228d1ad"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-instance-security-group",
            "name_prefix": "",
            "owner_id": "836768216030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-bastion-host"
            },
            "tags_all": {
              "Name": "allow-bastion-host"
            },
            "timeouts": null,
            "vpc_id": "vpc-023970052ee17616c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.oxla-bastion-security-group",
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oxla-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:subnet/subnet-04db3229600d528ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04db3229600d528ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836768216030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "oxla-public-subnet"
            },
            "tags_all": {
              "Name": "oxla-public-subnet"
            },
            "vpc_id": "vpc-023970052ee17616c"
          },
          "dependencies": [
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "oxla-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:subnet/subnet-016851d68aea44a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016851d68aea44a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "836768216030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-023970052ee17616c"
          },
          "dependencies": [
            "aws_vpc.oxla-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "oxla-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:836768216030:vpc/vpc-023970052ee17616c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f4e659ae2831473",
            "default_route_table_id": "rtb-0bc847612d0fe5fbf",
            "default_security_group_id": "sg-017c319129b53b011",
            "dhcp_options_id": "dopt-0b62cc731ed422034",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023970052ee17616c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc847612d0fe5fbf",
            "owner_id": "836768216030"
          }
        }
      ]
    }
  ]
}